@@ -15,7 +15,7 @@ describe Sunlight::District do
     end
 
     it "should return one record when lat/long are passed in" do
-      Sunlight::District.should_receive(:get_from_lat_long).and_return(Sunlight::District.new('NJ', '5'))
+      Sunlight::District.should_receive(:get_from_lat_long).and_return(Sunlight::District.new('NJ', '05'))
 
       district = Sunlight::District.get(:latitude => 123.45, :longitude => -123.45)
       district.state.should eql('NJ')
@@ -27,7 +27,7 @@ describe Sunlight::District do
       mock_placemark.should_receive(:latitude).and_return(123.45)
       mock_placemark.should_receive(:longitude).and_return(-123.45)
       Geocoding.should_receive(:get).and_return([mock_placemark])
-      Sunlight::District.should_receive(:get_from_lat_long).and_return(Sunlight::District.new('NJ', '5'))
+      Sunlight::District.should_receive(:get_from_lat_long).and_return(Sunlight::District.new('NJ', '05'))
 
       district = Sunlight::District.get(:address => "123 Main St New York New York 10108")
       district.state.should eql('NJ')
@@ -39,7 +39,7 @@ describe Sunlight::District do
   describe "#get_from_lat_long" do
 
     it "should return one record when valid lat/long are passed in" do
-      Sunlight::District.should_receive(:get_json_data).and_return({"response"=>{"districts"=>[{"district"=>{"number"=>"6","state"=>"GA"}}]}})
+      Sunlight::District.should_receive(:get_json_data).and_return({"response"=>{"districts"=>[{"district"=>{"number"=>"06","state"=>"GA"}}]}})
 
       district = Sunlight::District.get_from_lat_long(123.45, -123.45)
       district.state.should eql('GA')
@@ -58,7 +58,7 @@ describe Sunlight::District do
   describe "#all_from_zipcode" do
 
     it "should return array when valid zipcode is passed in" do
-      Sunlight::District.should_receive(:get_json_data).and_return({"response"=>{"districts"=>[{"district"=>{"number"=>"6","state"=>"GA"}}]}})
+      Sunlight::District.should_receive(:get_json_data).and_return({"response"=>{"districts"=>[{"district"=>{"number"=>"06","state"=>"GA"}}]}})
 
       districts = Sunlight::District.all_from_zipcode('12345')
       districts.first.state.should eql('GA')
