@@ -1,7 +1,7 @@
 Gem::Specification.new do |s|
   s.name = "sunlight"
-  s.version = "1.0.0"
-  s.date = "2009-06-10"
+  s.version = "1.0.1"
+  s.date = "2009-07-28"
   s.summary = "Library for accessing the Sunlight Labs API."
   s.description = "Library for accessing the Sunlight Labs API."
   s.rubyforge_project = "sunlight"
