@@ -1,3 +1,7 @@
+h3. 1.0.1 / 2009-07-28
+
+* Account for the API returning district numbers as "01" instead of "1"
+
 h3. 1.0 / 2009-06-25
 
 * Move to the sunlightlabs GitHub account
